--- a/jupyter/datascience/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/datascience/ubi9-python-3.12/pyproject.toml
@@ -4,38 +4,20 @@ version = "0.1.0"
 requires-python = "==3.12.*"
 
 dependencies = [
-    # Datascience and useful extensions
-    "codeflare-sdk~=0.34.0; platform_machine != 'ppc64le' and platform_machine != 's390x'",
-    "feast~=0.59.0",
-    "skl2onnx~=1.19.1",
-    "odh-notebooks-meta-workbench-datascience-deps",
-
-    # DB connectors
-    "pymongo~=4.16.0",
-    "psycopg~=3.3.2",
-    "pyodbc~=5.3.0",
-    "mysql-connector-python~=9.5.0",
-
-    # JupyterLab packages
-    "odh-elyra==4.3.2",
-    "odh-jupyter-trash-cleanup==0.1.1",
-
-    "jupyterlab==4.5.2",
-    "jupyter-bokeh~=4.0.5",
-    "jupyter-server~=2.17.0",
-    "jupyter-server-proxy~=4.4.0",
-    "jupyter-server-terminals~=0.5.3",
-    "jupyterlab-git~=0.51.2",
-    "jupyterlab-lsp~=5.1.1",
-    "jupyterlab-widgets~=3.0.15",
-    "jupyter-resource-usage~=1.1.1",
-    "nbdime~=4.0.2",
-    "nbgitpuller~=1.2.2",
-
-    # Base packages
-    "wheel~=0.46.3",
-    "setuptools~=80.9.0",
+    # Subproject dependencies
+    "notebooks-base-deps",
+    "notebooks-jupyterlab-deps",
+    "notebooks-jupyterlab-datascience-deps",
+    "notebooks-datascience-deps",
+    "notebooks-db-connectors-deps",
 ]
+
+[tool.uv.sources]
+notebooks-base-deps = { path = "../../../dependencies/base" }
+notebooks-jupyterlab-deps = { path = "../../../dependencies/jupyterlab" }
+notebooks-jupyterlab-datascience-deps = { path = "../../../dependencies/jupyterlab-datascience" }
+notebooks-datascience-deps = { path = "../../../dependencies/datascience" }
+notebooks-db-connectors-deps = { path = "../../../dependencies/db-connectors" }
 
 [tool.uv]
 environments = [
@@ -51,5 +33,3 @@ override-dependencies = [
     # TODO: Remove this override before RHOAI 3.4 GA once AIPCC-8698 is resolved
     "python-lsp-server>=1.11.0",
 ]
-[tool.uv.sources]
-odh-notebooks-meta-workbench-datascience-deps = { path = "../../../dependencies/odh-notebooks-meta-workbench-datascience-deps" }
