--- a/runtimes/datascience/ubi9-python-3.12/pyproject.toml
+++ b/runtimes/datascience/ubi9-python-3.12/pyproject.toml
@@ -4,23 +4,18 @@ version = "0.1.0"
 requires-python = "==3.12.*"
 
 dependencies = [
-    # Datascience and useful extensions
-    "codeflare-sdk~=0.34.0; platform_machine != 's390x' and platform_machine != 'ppc64le'",
-    "feast~=0.59.0",
-    "odh-notebooks-meta-runtime-datascience-deps",
-
-    # DB connectors
-    "pymongo~=4.16.0",
-    "psycopg~=3.3.2",
-    "pyodbc~=5.3.0",
-    "mysql-connector-python~=9.5.0",
-
-    "odh-notebooks-meta-runtime-elyra-deps",
-
-    # Base packages
-    "setuptools==80.9.0",
-    "wheel==0.46.3",
+    # Subproject dependencies
+    "notebooks-base-deps",
+    "notebooks-elyra-runtime-deps",
+    "notebooks-datascience-deps",
+    "notebooks-db-connectors-deps",
 ]
+
+[tool.uv.sources]
+notebooks-base-deps = { path = "../../../dependencies/base" }
+notebooks-elyra-runtime-deps = { path = "../../../dependencies/elyra-runtime" }
+notebooks-datascience-deps = { path = "../../../dependencies/datascience" }
+notebooks-db-connectors-deps = { path = "../../../dependencies/db-connectors" }
 
 [tool.uv]
 environments = [
@@ -33,7 +28,3 @@ override-dependencies = [
     # TODO: Remove this override before RHOAI 3.4 GA once AIPCC-8698 is resolved
     "python-lsp-server>=1.11.0",
 ]
-
-[tool.uv.sources]
-odh-notebooks-meta-runtime-elyra-deps = { path = "../../../dependencies/odh-notebooks-meta-runtime-elyra-deps" }
-odh-notebooks-meta-runtime-datascience-deps = { path = "../../../dependencies/odh-notebooks-meta-runtime-datascience-deps" }
