--- a/runtimes/pytorch/ubi9-python-3.12/pyproject.toml
+++ b/runtimes/pytorch/ubi9-python-3.12/pyproject.toml
@@ -9,27 +9,26 @@ dependencies = [
     "torch==2.9.0",
     "torchvision==0.24.0",
 
-    # Datascience and useful extensions
-    "codeflare-sdk~=0.34.0",
-    "feast~=0.59.0",
-    "odh-notebooks-meta-runtime-datascience-deps",
-
-    # DB connectors
-    "pymongo~=4.16.0",
-    "psycopg~=3.3.2",
-    "pyodbc~=5.3.0",
-    "mysql-connector-python~=9.5.0",
-
-    "odh-notebooks-meta-runtime-elyra-deps",
-
-    # Base packages
-    "setuptools==80.9.0",
-    "wheel==0.46.3",
+    # Subproject dependencies
+    "notebooks-base-deps",
+    "notebooks-elyra-runtime-deps",
+    "notebooks-datascience-deps",
+    "notebooks-db-connectors-deps",
 ]
 
 [tool.uv.sources]
-odh-notebooks-meta-runtime-elyra-deps = { path = "../../../dependencies/odh-notebooks-meta-runtime-elyra-deps" }
-odh-notebooks-meta-runtime-datascience-deps = { path = "../../../dependencies/odh-notebooks-meta-runtime-datascience-deps" }
+torch = { index = "pytorch-cuda" }
+torchvision = { index = "pytorch-cuda" }
+notebooks-base-deps = { path = "../../../dependencies/base" }
+notebooks-elyra-runtime-deps = { path = "../../../dependencies/elyra-runtime" }
+notebooks-datascience-deps = { path = "../../../dependencies/datascience" }
+notebooks-db-connectors-deps = { path = "../../../dependencies/db-connectors" }
+
+# https://docs.astral.sh/uv/concepts/indexes/#package-indexes
+[[tool.uv.index]]
+name = "pytorch-cuda"
+url = "https://download.pytorch.org/whl/cu128"
+explicit = true
 
 [tool.uv]
 environments = [
