--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -338,7 +338,7 @@ jobs:
 
       - name: "pull_request|schedule: resolve target if Trivy scan should run"
         id: resolve-target
-        if: ${{ fromJson(inputs.github).event_name == 'pull_request' || fromJson(inputs.github).event_name == 'schedule' }}
+        if: ${{ !cancelled() && steps.make-target.outcome == 'success' && (fromJson(inputs.github).event_name == 'pull_request' || fromJson(inputs.github).event_name == 'schedule') }}
         env:
           EVENT_NAME: ${{ fromJson(inputs.github).event_name }}
           HAS_TRIVY_LABEL: ${{ contains(fromJson(inputs.github).event.pull_request.labels.*.name, 'trivy-scan') }}
@@ -371,7 +371,7 @@ jobs:
           fi
 
       - name: Run Trivy vulnerability scanner
-        if: ${{ steps.resolve-target.outputs.target }}
+        if: ${{ !cancelled() && steps.resolve-target.outputs.target }}
         uses: ./.github/actions/trivy-scan-action
         with:
           scan-type: ${{ steps.resolve-target.outputs.type }}
@@ -431,7 +431,7 @@ jobs:
 
       # endregion
 
-      # region Typescript (browser) image tests
+      # region TypeScript (browser) image tests
 
       # https://playwright.dev/docs/ci
       # https://playwright.dev/docs/docker
