NO-JIRA: chore(docker): add `mongocli-builder` stage into dockerfile_fragments.py templates
Successfully integrated mongocli compilation stages into the templating system managed by [`scripts/dockerfile_fragments.py`](scripts/dockerfile_fragments.py:1).

Added three new templates to [`dockerfile_fragments.py`](scripts/dockerfile_fragments.py:63):
- **`mongocli-builder stage`**: Simple mongocli builder for most images
- **`mongocli-builder stage with s390x support`**: Advanced builder with s390x architecture handling for datascience images
- **`Copy mongocli from builder`**: Template for copying the compiled binary

Created [`scripts/add_mongocli_markers.py`](scripts/add_mongocli_markers.py:1) to automatically add BEGIN/END markers to all Dockerfile.* files containing mongocli stages.

Successfully applied templates to **16 Dockerfiles** across:
- jupyter/pytorch (cuda, konflux.cuda)
- jupyter/pytorch+llmcompressor (cuda, konflux.cuda)
- jupyter/tensorflow (cuda, konflux.cuda)
- jupyter/trustyai (cpu, konflux.cpu, cowsay.cpu)
- jupyter/rocm/pytorch (rocm, konflux.rocm)
- jupyter/rocm/tensorflow (rocm, konflux.rocm)
- jupyter/datascience (cpu, konflux.cpu, cpu.j2, mongocli-builder)

- **Centralized Management**: All mongocli build stages now managed from a single location
- **Consistency**: Ensures identical mongocli compilation across all images
- **Easy Updates**: Future changes to mongocli version or build process only need to be made in [`dockerfile_fragments.py`](scripts/dockerfile_fragments.py:1)
- **Maintainability**: Reduces code duplication and potential for drift between Dockerfiles

--- a/jupyter/tensorflow/ubi9-python-3.12/Dockerfile.cuda
+++ b/jupyter/tensorflow/ubi9-python-3.12/Dockerfile.cuda
@@ -5,6 +5,7 @@ ARG TARGETARCH
 #########################
 ARG BASE_IMAGE
 
+### BEGIN mongocli-builder stage
 ######################################################
 # mongocli-builder (build stage only, not published) #
 ######################################################
@@ -20,6 +21,8 @@ unzip ./mongodb-cli-mongocli-v${MONGOCLI_VERSION}.zip
 cd ./mongodb-cli-mongocli-v${MONGOCLI_VERSION}/
 CGO_ENABLED=1 GOOS=linux go build -a -tags strictfipsruntime -o /tmp/mongocli ./cmd/mongocli/
 EOF
+
+### END mongocli-builder stage
 
 ####################
 # cuda-base        #
@@ -133,8 +136,10 @@ dnf clean all
 rm -rf /var/cache/yum
 EOF
 
+### BEGIN Copy mongocli from builder
 # Copy dynamically-linked mongocli built in earlier build stage
 COPY --from=mongocli-builder /tmp/mongocli /opt/app-root/bin/
+### END Copy mongocli from builder
 
 # Other apps and tools installed as default user
 USER 1001
