NO-JIRA: chore(docker): add `mongocli-builder` stage into dockerfile_fragments.py templates (#1834)
Successfully integrated mongocli compilation stages into the templating system managed by [`scripts/dockerfile_fragments.py`](scripts/dockerfile_fragments.py:1).

## Changes Made:

### 1. Enhanced Template System
Added three new templates to [`dockerfile_fragments.py`](scripts/dockerfile_fragments.py:63):
- **`mongocli-builder stage`**: Simple mongocli builder for most images
- **`mongocli-builder stage with s390x support`**: Advanced builder with s390x architecture handling for datascience images
- **`Copy mongocli from builder`**: Template for copying the compiled binary

### 2. Automated Marker Addition
Created [`scripts/add_mongocli_markers.py`](scripts/add_mongocli_markers.py:1) to automatically add BEGIN/END markers to all Dockerfile.* files containing mongocli stages.

### 3. Applied Templates
Successfully applied templates to **16 Dockerfiles** across:
- jupyter/pytorch (cuda, konflux.cuda)
- jupyter/pytorch+llmcompressor (cuda, konflux.cuda)
- jupyter/tensorflow (cuda, konflux.cuda)
- jupyter/trustyai (cpu, konflux.cpu, cowsay.cpu)
- jupyter/rocm/pytorch (rocm, konflux.rocm)
- jupyter/rocm/tensorflow (rocm, konflux.rocm)
- jupyter/datascience (cpu, konflux.cpu, cpu.j2, mongocli-builder)

## Benefits:
- **Centralized Management**: All mongocli build stages now managed from a single location
- **Consistency**: Ensures identical mongocli compilation across all images
- **Easy Updates**: Future changes to mongocli version or build process only need to be made in [`dockerfile_fragments.py`](scripts/dockerfile_fragments.py:1)
- **Maintainability**: Reduces code duplication and potential for drift between Dockerfiles

--- a/jupyter/datascience/ubi9-python-3.12/Dockerfile.konflux.cpu
+++ b/jupyter/datascience/ubi9-python-3.12/Dockerfile.konflux.cpu
@@ -3,6 +3,7 @@
 #########################
 ARG BASE_IMAGE
 
+### BEGIN mongocli-builder stage with s390x support
 ######################################################
 # mongocli-builder (build stage only, not published) #
 ######################################################
@@ -32,6 +33,8 @@ else
     CGO_ENABLED=1 GOOS=linux GOARCH=${arch} GO111MODULE=on go build -a -tags strictfipsruntime -o /tmp/mongocli ./cmd/mongocli/
 fi
 EOF
+
+### END mongocli-builder stage with s390x support
 
 ####################
 # cpu-base         #
@@ -335,8 +338,10 @@ dnf clean all
 rm -rf /var/cache/yum
 EOF
 
+### BEGIN Copy mongocli from builder
 # Copy dynamically-linked mongocli built in earlier build stage
 COPY --from=mongocli-builder /tmp/mongocli /opt/app-root/bin/
+### END Copy mongocli from builder
 
 # Other apps and tools installed as default user
 USER 1001
