NO-JIRA: tests(pytest): speed up pytest collection by limiting search paths
Test collection was taking 8-10 seconds, even for just 36 tests.
This made the edit-test cycle unnecessarily slow.

Investigation:
- Ran 'pytest --collect-only' with various --ignore flags to isolate cause
- Found that '--doctest-modules' was scanning ALL Python files in the repo
- With '-p no:doctest', collection dropped from ~6s to ~0.4s
- jdanek's checkout of the repo contains ~6700 Python files (many in tmp/, scripts/, etc.)
- The --ignore flags only excluded ci, codeserver, jupyter, rstudio
- This left many directories being scanned unnecessarily

Root cause:
The --doctest-modules option scans every .py file looking for doctests.
Without explicit testpaths, pytest starts from the root directory and
walks through everything not in norecursedirs or --ignore.

Solution:
- Add 'testpaths = tests ntb' to explicitly define test directories
- Remove --ignore flags from addopts (now redundant with testpaths)
- Expand norecursedirs to include .venv, tmp, node_modules, __pycache__

Result:
- Collection time: 8-10s -> 2s (4-5x improvement)
- All 36 tests still collected correctly
- Doctest in ntb/strings.py still runs

Additional improvements:

- Add testpaths to explicitly define test directories (tests, ntb)
- Add collect_ignore to skip tests/containers by default (imports heavy
  modules like docker, kubernetes, testcontainers that slow collection)
- Expand norecursedirs to exclude .venv, tmp, node_modules, __pycache__

Container tests can still be run explicitly:
  pytest tests/containers --image=...

Collection time improved from ~8s to ~0.5s.

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,11 +5,17 @@
 # https://docs.pytest.org/en/stable/example/pythoncollection.html#ignore-paths-during-test-collection
 addopts =
     --strict-markers --capture=no --tb=short
-    --ignore=ci --ignore=codeserver --ignore=jupyter --ignore=rstudio
     --doctest-modules
 
+# Directories to collect tests from (speeds up collection significantly)
+# Note: tests/containers is ignored by default because it imports heavy modules
+# (docker, kubernetes, testcontainers) that slow down collection by ~1.5s.
+# Run container tests explicitly: pytest tests/containers --image=...
+testpaths = tests ntb
+collect_ignore = ["tests/containers"]
+
 # https://docs.pytest.org/en/stable/example/pythoncollection.html#changing-directory-recursion
-norecursedirs = .git
+norecursedirs = .git .venv tmp node_modules __pycache__
 
 # pytest-subtest plugin is built-in since pytest 9.0: https://docs.pytest.org/en/stable/how-to/subtests.html
 required_plugins =
