NO-JIRA: refactor(.github/workflows): use JSON-based platform runner mapping and add `README.md` for runners

--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -28,21 +28,23 @@ name: Build & Publish Notebook Servers (TEMPLATE)
         default: false
         description: "add RHEL subscription from github secret"
         type: boolean
-
-env:
-  # language=json
-  PLATFORM_RUNNERS: >-
-    {
-      "linux/amd64": "ubuntu-24.04",
-      "linux/arm64": "ubuntu-24.04-arm",
-      "linux/ppc64le": "ubuntu-24.04",
-      "linux/s390x": "ubuntu-24.04"
-    }
+      PLATFORM_RUNNERS:
+        required: false
+        # language=json
+        default: >-
+          {
+            "linux/amd64": "ubuntu-24.04",
+            "linux/arm64": "ubuntu-24.04-arm",
+            "linux/ppc64le": "ubuntu-24.04",
+            "linux/s390x": "ubuntu-24.04"
+          }
+        description: "Available contexts for runs-on are: github, inputs, matrix, needs, strategy, vars. Let's use inputs"
+        type: string
 
 jobs:
   build:
     # https://docs.github.com/en/actions/how-tos/using-github-hosted-runners/using-github-hosted-runners/about-github-hosted-runners#standard-github-hosted-runners-for-public-repositories
-    runs-on: ${{ fromJSON(env.PLATFORM_RUNNERS)[inputs.platform] || 'no-such-runner' }}
+    runs-on: ${{ fromJSON(inputs.PLATFORM_RUNNERS)[inputs.platform] || 'no-such-runner' }}
     env:
       # Some pieces of code (image pulls, for example) in podman consult TMPDIR or default to /var/tmp
       TMPDIR: /home/runner/.local/share/containers/tmpdir
