pytest.ini: Add explicit test discovery patterns and cache_dir configuration

--- a/pytest.ini
+++ b/pytest.ini
@@ -14,8 +14,15 @@ addopts =
 testpaths = tests ntb
 collect_ignore = ["tests/containers"]
 
+# Test discovery patterns (explicit defaults for documentation)
+python_files = test_*.py *_test.py
+python_classes = Test*
+python_functions = test_*
+
 # https://docs.pytest.org/en/stable/example/pythoncollection.html#changing-directory-recursion
 norecursedirs = .git .venv tmp node_modules __pycache__
+
+cache_dir = .pytest_cache
 
 # pytest-subtest plugin is built-in since pytest 9.0: https://docs.pytest.org/en/stable/how-to/subtests.html
 required_plugins =
