--- a/pytest.ini
+++ b/pytest.ini
@@ -5,11 +5,24 @@
 # https://docs.pytest.org/en/stable/example/pythoncollection.html#ignore-paths-during-test-collection
 addopts =
     --strict-markers --capture=no --tb=short
-    --ignore=ci --ignore=codeserver --ignore=jupyter --ignore=rstudio
     --doctest-modules
 
+# Directories to collect tests from (speeds up collection significantly)
+# Note: tests/containers is ignored by default because it imports heavy modules
+# (docker, kubernetes, testcontainers) that slow down collection by ~1.5s.
+# Run container tests explicitly: pytest tests/containers --image=...
+testpaths = tests ntb
+collect_ignore = ["tests/containers"]
+
+# Test discovery patterns (explicit defaults for documentation)
+python_files = test_*.py *_test.py
+python_classes = Test*
+python_functions = test_*
+
 # https://docs.pytest.org/en/stable/example/pythoncollection.html#changing-directory-recursion
-norecursedirs = .git
+norecursedirs = .git .venv tmp node_modules __pycache__
+
+cache_dir = .pytest_cache
 
 # pytest-subtest plugin is built-in since pytest 9.0: https://docs.pytest.org/en/stable/how-to/subtests.html
 required_plugins =
