RHAIENG-2437: Upgrade CPU workbench and runtime images to RHAIBI 3.3

--- a/.tekton/odh-workbench-jupyter-trustyai-cpu-py312-pull-request.yaml
+++ b/.tekton/odh-workbench-jupyter-trustyai-cpu-py312-pull-request.yaml
@@ -50,6 +50,9 @@ spec:
     value: 5d
   - name: enable-slack-failure-notification
     value: "false"
+  timeouts:
+    pipeline: 8h
+    tasks: 4h
   pipelineRef:
     resolver: git
     params:
