--- a/jupyter/rocm/tensorflow/ubi9-python-3.12/build-args/konflux.rocm.conf
+++ b/jupyter/rocm/tensorflow/ubi9-python-3.12/build-args/konflux.rocm.conf
@@ -1,5 +1,5 @@
 # Base Image   : RHEL 9.6 with Python 3.12
-# ROCm Version : 6.3.4
+# ROCm Version : 6.4
 # Architectures: linux/x86_64
 # Source       : https://quay.io/repository/aipcc/base-images/rocm
-BASE_IMAGE=registry.redhat.io/rhai/base-image-rocm-rhel9:3.2.0-1764877298
+BASE_IMAGE=quay.io/aipcc/base-images/rocm-6.4-el9.6:3.3.0-1768412209
