Test one of CUDA image

--- a/jupyter/minimal/ubi9-python-3.12/build-args/konflux.cuda.conf
+++ b/jupyter/minimal/ubi9-python-3.12/build-args/konflux.cuda.conf
@@ -2,4 +2,4 @@
 # CUDA Version : 12.8.1
 # Architectures: linux/arm64, linux/x86_64
 # Source       : https://quay.io/repository/aipcc/base-images/cuda
-BASE_IMAGE=registry.redhat.io/rhai/base-image-cuda-rhel9:3.2.0-1765367347
+BASE_IMAGE=quay.io/aipcc/base-images/cuda-12.9-el9.6:3.3.0-1768412345
