--- a/.tekton/odh-base-image-rocm-py312-ubi9-pull-request.yaml
+++ b/.tekton/odh-base-image-rocm-py312-ubi9-pull-request.yaml
@@ -13,7 +13,7 @@ metadata:
     pipelinesascode.tekton.dev/max-keep-runs: '3'
     pipelinesascode.tekton.dev/on-comment: ^/kfbuild\s+(all|odh\-base\-image\-rocm\-py312\-ubi9|base\-images/rocm/6\.2/ubi9\-python\-3\.12)
     pipelinesascode.tekton.dev/on-cel-expression: |
-      event == "pull_request" && target_branch == "main"  && ( "base-images/rocm/6.2/ubi9-python-3.12/**".pathChanged() || ".tekton/odh-base-image-rocm-py312-ubi9-pull-request.yaml".pathChanged() )
+      event == "pull_request" && target_branch == "main"  && ( "base-images/utils/**".pathChanged() || "base-images/rocm/6.2/ubi9-python-3.12/**".pathChanged() || ".tekton/odh-base-image-rocm-py312-ubi9-pull-request.yaml".pathChanged() )
       && body.repository.full_name == "opendatahub-io/notebooks"
   labels:
     appstudio.openshift.io/application: opendatahub-release
