--- a/base-images/cpu/ubi9-python-3.12/Dockerfile.cpu
+++ b/base-images/cpu/ubi9-python-3.12/Dockerfile.cpu
@@ -9,6 +9,10 @@ COPY base-images/utils/aipcc.sh /mnt/aipcc.sh
 FROM registry.access.redhat.com/ubi9/python-312:latest AS base
 
 USER 0
+ARG TARGETARCH
+ENV TARGETARCH=${TARGETARCH}
+ENV PYTHON=python3.12
+ENV VIRTUAL_ENV=/opt/app-root/
 
 RUN \
 --mount=from=buildscripts,source=/mnt,target=/mnt \
