--- a/base-images/rocm/6.3/c9s-python-3.12/Dockerfile.rocm
+++ b/base-images/rocm/6.3/c9s-python-3.12/Dockerfile.rocm
@@ -1,8 +1,26 @@
+FROM quay.io/centos/centos:stream9 AS buildscripts
+COPY base-images/utils/aipcc.sh /mnt/aipcc.sh
+
 ####################
 # base             #
 ####################
 FROM quay.io/sclorg/python-312-c9s:c9s AS base
 
+USER 0
+ARG TARGETARCH
+ENV TARGETARCH=${TARGETARCH}
+ENV PYTHON=python3.12
+ENV VIRTUAL_ENV=/opt/app-root/
+
+RUN \
+--mount=from=buildscripts,source=/mnt,target=/mnt \
+--mount=type=cache,sharing=locked,id=dnf-c9s,target=/var/cache/dnf \
+/bin/bash <<'EOF'
+set -Eeuxo pipefail
+/mnt/aipcc.sh
+EOF
+
+USER 1001
 WORKDIR /opt/app-root/bin
 
 ########################
