fix(base-images): add `set -Eeuxo pipefail` to improve script safety in Dockerfile.cpu

--- a/base-images/cpu/ubi9-python-3.12/Dockerfile.cpu
+++ b/base-images/cpu/ubi9-python-3.12/Dockerfile.cpu
@@ -18,6 +18,7 @@ RUN \
 --mount=from=buildscripts,source=/mnt,target=/mnt \
 --mount=type=cache,sharing=locked,id=dnf-ubi9,target=/var/cache/dnf \
 /bin/bash <<'EOF'
+set -Eeuxo pipefail
 /mnt/aipcc.sh
 EOF
 
