--- a/base-images/rocm/6.2/ubi9-python-3.12/Dockerfile.rocm
+++ b/base-images/rocm/6.2/ubi9-python-3.12/Dockerfile.rocm
@@ -1,3 +1,5 @@
+ARG TARGETARCH
+
 FROM registry.access.redhat.com/ubi9/ubi-minimal:latest AS buildscripts
 COPY base-images/utils/aipcc.sh /mnt/aipcc.sh
 
